test/Index/Store/record-with-compile-error.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -index-store-path %t/idx -o %t/file.o -typecheck %s -verify
// RUN: c-index-test core -print-record %t/idx | %FileCheck %s

// CHECK: function/Codira | test1() | [[TEST1_FUNC:.*]] | <no-cgname> | Def
// CHECK: [[@LINE+1]]:6 | function/Codira | [[TEST1_FUNC]]
fn test1() {
  unresolved() // expected-error {{cannot find 'unresolved' in scope}}
}
